# backend-modules

./: .gitignore  README.md
admin_info/: Cargo.toml  sqlx-data.json
admin_info/src/: main.rs  service.rs
base_library/: Cargo.toml
base_library/src/: lib.rs
chat/: Cargo.toml
chat/src/: main.rs  service.rs
notification/: Cargo.toml
notification/src/: apns_service.rs  mail_service.rs  main.rs  service.rs
user_info/: Cargo.toml  sqlx-data.json
user_info/src/: admin_service.rs  main.rs  service.rs  user_service.rs
