[package]
name = "admin_info"
version = "0.1.0"
edition = "2021"

[dependencies]
# Base Dependency, which contains utilities and constants needed for this module,
base_library = { path = "../base_library" }

axum = { version = "0.6.0-rc.4", features = ["headers"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1.21.1", features = ["full"] }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
dotenvy = "0.15.5"
time = { version = "0.3.14", features = ["serde", "serde-well-known", "local-offset", "std"] }

# Database
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "macros", "postgres", "time", "offline", "uuid"] }

# UUID
uuid = { version = "1.1.2", features = ["serde", "v1"] }
rand = "0.8.5"

# JWT
jsonwebtoken = "8.1.1"
once_cell = "1.15.0"

# Memory Allocation
mimalloc = { version = "*", default-features = false }

[profile.release]
strip = true
lto = "fat"
opt-level = 3
codegen-units = 1
panic = "abort"
