[package]
name = "base_library"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.0-rc.4", features = ["headers"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
dotenvy = "0.15.5"
time = { version = "0.3.14", features = ["serde", "serde-well-known", "local-offset", "std"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "macros", "postgres", "time", "offline", "uuid"] }
jsonwebtoken = "8.1.1"
once_cell = "1.15.0"
uuid = { version = "1.1.2", features = ["serde", "v1"] }
rand = "0.8.5"

[profile.release]
strip = true
lto = "fat"
opt-level = 3
codegen-units = 1
panic = "abort"
