[package]
name = "notification"
version = "0.1.0"
edition = "2021"

[dependencies]
base_library = { path = "../base_library" }
axum = { version = "0.6.0-rc.2", features = ["headers"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1.21.1", features = ["full"] }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
mimalloc = { version = "*", default-features = false }
openssl = { version = "0.10.42", features = ["vendored"] }

# email support
lettre = { version = "0.10.1", features = ["tokio1-native-tls", "tokio1", "serde", "tracing"] }

# apns support
a2 = "0.6.2"

[profile.release]
strip = true
lto = "fat"
opt-level = 3
codegen-units = 1
panic = "abort"
